# Makerbase-Servo42D-Wrapper

./: CMakeLists.txt  main.cpp  readme.md  todo.txt
include/: modbusbus.hpp  motor.hpp
src/: modbusbus.cpp  motor.cpp
